--- a/assignment-2/app/globals.css
+++ b/assignment-2/app/globals.css
@@ -1,7 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
-
 @custom-variant dark (&:is(.dark *));
+
+html,
+body {
+  font-family: "Mona Sans", sans-serif;
+}
 
 @theme inline {
   --color-background: var(--background);
@@ -45,10 +50,10 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: oklch(0.98 0.01 260);
   --foreground: oklch(0.129 0.042 264.695);
   --card: oklch(1 0 0);
-  --card-foreground: oklch(0.129 0.042 264.695);
+  --card-foreground: oklch(0.18 0.05 260);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.129 0.042 264.695);
   --primary: oklch(0.208 0.042 265.755);
@@ -110,17 +115,23 @@
 }
 
 @layer utilities {
-  .btn-primary {
-    @apply px-20 py-6 mt-1 text-lg text-white transition duration-300 ease-in-out rounded-md md:px-10 bg-primary hover:bg-primary/60;
+  .btn-heading {
+    @apply px-25 py-6 mt-1 text-lg text-white transition duration-300 ease-in-out rounded-xl md:px-15 bg-muted-foreground hover:bg-sidebar/80;
+  }
+
+  .btn-save {
+    @apply py-6 px-10 mt-1 text-lg text-white transition duration-300 ease-in-out rounded-xl bg-muted-foreground hover:bg-sidebar/80;
   }
 }
 
-/* globals.css */
+.card-hover {
+  @apply transition transform duration-300 hover:shadow-lg hover:scale-[1.02] border border-border rounded-2xl bg-card text-card-foreground;
+}
 
 .heading-title {
-  @apply mb-6 text-3xl font-bold text-center md:text-4xl;
+  @apply -mt-3 mb-6 text-3xl font-bold text-center md:text-4xl;
 }
 
 .sub-heading {
-  @apply mb-6 text-2xl font-bold text-center md:text-3xl;
+  @apply -mt-3 mb-6 text-2xl font-bold text-center md:text-3xl;
 }
