--- a/assignment-2/app/globals.css
+++ b/assignment-2/app/globals.css
@@ -58,7 +58,7 @@ body {
   --popover-foreground: oklch(0.129 0.042 264.695);
   --primary: oklch(0.208 0.042 265.755);
   --primary-foreground: oklch(0.984 0.003 247.858);
-  --secondary: oklch(0.968 0.007 247.896);
+  --secondary: oklch(0.279 0.041 260.031);
   --secondary-foreground: oklch(0.208 0.042 265.755);
   --muted: oklch(0.968 0.007 247.896);
   --muted-foreground: oklch(0.554 0.046 257.417);
@@ -66,7 +66,7 @@ body {
   --accent-foreground: oklch(0.208 0.042 265.755);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.929 0.013 255.508);
-  --input: oklch(0.929 0.013 255.508);
+  --input: oklch(87.939% 0.01756 256.378);
   --ring: oklch(0.704 0.04 256.788);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
@@ -94,14 +94,14 @@ body {
   --primary-foreground: oklch(0.208 0.042 265.755);
   --secondary: oklch(0.279 0.041 260.031);
   --secondary-foreground: oklch(0.984 0.003 247.858);
-  --muted: oklch(0.279 0.041 260.031);
+  --muted: oklch(34.419% 0.0538 261.195);
   --muted-foreground: oklch(0.704 0.04 256.788);
   --accent: oklch(0.279 0.041 260.031);
   --accent-foreground: oklch(0.984 0.003 247.858);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.551 0.027 264.364);
+  --ring: oklch(69.097% 0.03344 263.465);
 }
 
 @layer base {
@@ -116,11 +116,15 @@ body {
 
 @layer utilities {
   .btn-heading {
-    @apply px-25 py-6 mt-1 text-lg text-white transition duration-300 ease-in-out rounded-xl md:px-15 bg-muted-foreground hover:bg-sidebar/80;
+    @apply px-25 py-6 mt-1 text-lg transition duration-300 ease-in-out rounded-xl;
+    @apply text-sidebar bg-input hover:bg-sidebar/70 hover:text-sidebar-foreground;
+    @apply dark:text-accent-foreground dark:bg-muted dark:hover:bg-ring dark:hover:text-secondary;
   }
 
   .btn-save {
-    @apply py-6 px-10 mt-1 text-lg text-white transition duration-300 ease-in-out rounded-xl bg-muted-foreground hover:bg-sidebar/80;
+    @apply py-6 px-10 mt-1 text-lg transition duration-300 ease-in-out rounded-xl;
+    @apply text-sidebar bg-input hover:bg-sidebar/70 hover:text-sidebar-foreground;
+    @apply dark:text-accent-foreground dark:bg-muted dark:hover:bg-ring dark:hover:text-secondary;
   }
 }
 
