--- a/grand-project/app/globals.css
+++ b/grand-project/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -24,3 +25,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.card-hover-effect {
+  @apply transition-transform duration-300 transform hover:scale-[1.02];
+}
+
